...
                return;
              }
            }
            _focusNodes[widget.length - 1].requestFocus();
          },
          child: Row(
            key: const Key('otpInputRow'),
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: List.generate(widget.length, (index) {
              return _SparkOtpBox(
                key: ValueKey('spark_otp_$index'),
                controller: _controllers[index],
                focusNode: _focusNodes[index],
...
